[gd_scene load_steps=5 format=3 uid="uid://bmakwifos6ba3"]

[ext_resource type="FontFile" uid="uid://dd4yrqkip4d2m" path="res://assets/fonts/Early GameBoy.ttf" id="1_qtfik"]
[ext_resource type="Script" path="res://scenes/ui/menus/pause_menu/pause_menu.gd" id="2_jc32t"]

[sub_resource type="Theme" id="Theme_4bfeh"]
default_font = ExtResource("1_qtfik")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fyl0a"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4bfeh")
script = ExtResource("2_jc32t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_fyl0a")
layout_mode = 2
button_mask = 5
text = "Resume"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
